--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand">
       <img src="https://d1.awsstatic.com/logos/aws-logo-lockups/poweredbyaws/PB_AWS_logo_RGB_stacked_REV_SQ.91cd4af40773cbfbd15577a3c2b8a346fe3e8fa2.png" width="30" height="24" class="d-inline-block align-text-top">
-      ELSA - Latam Builder's Fair 2021
+      <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p>
     </a>
   </div>
 </nav>
