--- a/elsap/src/styles.css
+++ b/elsap/src/styles.css
@@ -3,6 +3,7 @@ background-color:#232F3E;
 border-radius: 4px;
 color: white;
 }
+#mapid { height: 180px; }
 
 #banner{
   background-image: url(./img/banner.png); 
@@ -14,8 +15,8 @@ color: white;
     border-radius: 4px;
     border: 1px solid #eee;
     background-color: #fafafa;
-    margin-top: 5px;
-    padding: 16px;
+    margin-top: 30px;
+    padding: 350px;
     display: flex;
     flex-direction: row;
     justify-content: center;
