--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -1,7 +1,10 @@
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <nav class="navbar">
   <div class="container-fluid">
     <a class="navbar-brand">
-      <img src="https://d1.awsstatic.com/logos/aws-logo-lockups/poweredbyaws/PB_AWS_logo_RGB_stacked_REV_SQ.91cd4af40773cbfbd15577a3c2b8a346fe3e8fa2.png" width="30" height="24" class="d-inline-block align-text-top">
+      <img
+        src="https://d1.awsstatic.com/logos/aws-logo-lockups/poweredbyaws/PB_AWS_logo_RGB_stacked_REV_SQ.91cd4af40773cbfbd15577a3c2b8a346fe3e8fa2.png"
+        width="30" height="24" class="d-inline-block align-text-top">
       <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p>
     </a>
   </div>
@@ -20,13 +23,6 @@
       <app-map></app-map>
     </div>
   </div>
-
-  <div class="card">
-    <div class="card-body">
-      <app-temp></app-temp>
-    </div>
-  </div>
-
 </div>
 
 <div class="footer">
