--- a/elsap/src/styles.css
+++ b/elsap/src/styles.css
@@ -1,47 +1,51 @@
-#title{
-background-color:#232F3E;
-border-radius: 4px;
-color: white;
+#title {
+  background-color: #232F3E;
+  border-radius: 4px;
+  color: white;
 }
-#mapid { height: 180px; }
 
-#banner{
-  background-image: url(./img/banner.png); 
+#mapid {
+  height: 180px;
+}
+
+#banner {
+  background-image: url(./img/banner.png);
   background-repeat: no-repeat;
   background-size: 100% 155%;
 }
-  .card {
-    all: unset;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    margin-top: 30px;
-    padding: 350px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-  }
-  .navbar{
-    margin-bottom: 3%;
-    background-color: #232F3E;
-    color: black;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-  }
-  .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background-color: white;
-  }
 
-  #chart {
-    max-width: 250px;
-    margin: 35px auto;
+.card {
+  all: unset;
+  border-radius: 4px;
+  border: 1px solid #eee;
+  background-color: #fafafa;
+  margin: 30px;
+  padding: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.navbar {
+  margin-bottom: 3%;
+  background-color: #232F3E;
+  color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: white;
+}
+
+#chart {
+  margin: 30px;
 }
