--- a/elsap/src/styles.css
+++ b/elsap/src/styles.css
@@ -26,6 +26,7 @@
   justify-content: center;
   align-items: center;
   transition: all 0.2s ease-in-out;
+  z-index: 1;
 }
 
 .navbar {
@@ -44,7 +45,8 @@
   width: 100%;
   text-align: center;
   background-color:#232F3E;
-  color: white
+  color: white;
+  z-index: 99;
 }
 
 #chart {
