--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -1,4 +1,5 @@
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
 <nav class="navbar">
   <div class="container-fluid">
     <a class="navbar-brand">
@@ -17,11 +18,15 @@
     <div class="col-8" id="banner">
     </div>
   </div>
-
+  <div class="container">
+    
+      <p id="temp"> Current Temperature </p>
+      <p id="alt"> Current Altitude</p>
+      <p id="location"> Current Location </p>
+  </div>
   <div class="card">
     <div class="card-body">
       <app-map></app-map>
     </div>
   </div>
 </div>
-
