fixed css from dash

--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -6,8 +6,8 @@
       <img
         src="https://d1.awsstatic.com/logos/aws-logo-lockups/poweredbyaws/PB_AWS_logo_RGB_stacked_REV_SQ.91cd4af40773cbfbd15577a3c2b8a346fe3e8fa2.png"
         width="30" height="24" class="d-inline-block align-text-top">
-      <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p>
     </a>
+    <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p>
   </div>
 </nav>
 <div class="container">
@@ -18,11 +18,19 @@
     <div class="col-8" id="banner">
     </div>
   </div>
-  <div class="container">
-    
-      <p id="temp"> Current Temperature </p>
-      <p id="alt"> Current Altitude</p>
-      <p id="location"> Current Location </p>
+  <div class="row" id="cards">
+    <div id="colTemp" class="col alert-info box">
+      <p> Temperature </p>
+      <p id="temp"> </p>
+    </div>
+    <div id="colAlt" class="col alert-info box">
+      <p> Altitude</p>
+      <p id="alt"> </p>
+    </div>
+    <div class="col alert-info box">
+      <p> Location</p>
+      <p id="location">  </p>
+    </div>
   </div>
   <div class="card">
     <div class="card-body">
