--- a/elsap/src/styles.css
+++ b/elsap/src/styles.css
@@ -5,7 +5,7 @@
 }
 
 #mapid {
-  height: 180px;
+  height: 30%;
 }
 
 #banner {
@@ -19,7 +19,7 @@
   border-radius: 4px;
   border: 1px solid #eee;
   background-color: #fafafa;
-  margin: 30px;
+  margin: 22px;
   padding: 350px;
   display: flex;
   flex-direction: row;
@@ -28,9 +28,11 @@
   transition: all 0.2s ease-in-out;
   z-index: 1;
 }
-
+.row{
+  margin-bottom: 15px;
+}
 .navbar {
-  margin-bottom: 3%;
+  margin-bottom: 2%;
   background-color: #232F3E;
   color: black;
   display: flex;
@@ -51,4 +53,15 @@
 
 #chart {
   margin: 65px;
+}
+
+#cards{
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+  border-radius: 10px;
+}
+
+.box {
+  margin: 5px ;
 }
