--- a/elsap/src/app/map/map.component.css
+++ b/elsap/src/app/map/map.component.css
@@ -1,19 +1,31 @@
 .map-container {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    margin: 30px;
+    margin: 30px; */
+    /* top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 30px; */
+    display: block;
+    width: 100%;
+    height: 450px;
   }
   
   .map-frame {
-    border: 2px solid black;
+    border: 1px solid grey;
     height: 100%;
+    width: 100%;
+    z-index: 99;
   }
   
   #map {
     height: 100%;
+    width: 100%;
+    position: sticky !important;
   }
 
 
