--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -36,12 +36,12 @@
       <p id="speed"><span class="symbol-metric">11 seconds</span></p>
     </div> -->
   </div>
-  <div class="row">
+  <div class="row row-map">
     <div class="col-md-12">
       <app-map></app-map>
     </div>
   </div>
-  <div class="row">
-    <div id="myChart" class="col-md-12"></div>
+  <div class="row my-chart-row">
+    <div id="myChart" class="col-md-12 card-like"></div>
   </div>
 </div>
