--- a/elsap/src/app/map/map.component.css
+++ b/elsap/src/app/map/map.component.css
@@ -13,7 +13,15 @@
     display: block;
     width: 100%;
     height: 450px;
+    padding: 4px;
+    /* border: 2px grey; */
+    /* border-style: solid;
+    border-width: 1px; */
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
   }
+
   
   .map-frame {
     border: 1px solid grey;
