--- a/elsap/src/styles.css
+++ b/elsap/src/styles.css
@@ -51,6 +51,7 @@
   background-color:#232F3E;
   color: white;
   z-index: 99;
+  font-size: 12px;
 }
 
 #chart {
@@ -81,3 +82,14 @@
   flex: row;
   justify-content: space-between;
 }
+
+.my-chart-row{
+  margin-bottom: 80px;
+}
+
+.card-like{
+    /* padding: 20px; */
+    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    border-radius: 5px;
+}
+
