--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -1,16 +1,24 @@
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
+
 <nav class="navbar">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand">
       <img
         src="https://d1.awsstatic.com/logos/aws-logo-lockups/poweredbyaws/PB_AWS_logo_RGB_stacked_REV_SQ.91cd4af40773cbfbd15577a3c2b8a346fe3e8fa2.png"
         width="80px" height="80px" class="d-inline-block align-text-top">
     </a>
-    <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p>
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active nav-item">Dashboard</a>
+      <a href="#news" class="nav-item">Historic</a>
+      <a href="#about" class="nav-item">About</a>
+    </div>
+    <!-- <p style="color:aliceblue"> ELSA - Latam Builder's Fair 2021</p> -->
   </div>
 </nav>
+
 <div class="container">
+
   <div class="row">
     <div class="col" id="title">
       <h1><br> Electronic <br> Safety <br>Advisor for <br>Vaccines</h1>
