--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -9,7 +9,7 @@
         width="80px" height="80px" class="d-inline-block align-text-top">
     </a>
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active nav-item">Dashboard</a>
+      <a href="#home" class="active nav-item">Dashboardtes</a>
       <a href="#news" class="nav-item">Historic</a>
       <a href="#about" class="nav-item">About</a>
     </div>
