--- a/elsap/src/app/app.component.html
+++ b/elsap/src/app/app.component.html
@@ -10,7 +10,7 @@
     <div class="topnav" id="myTopnav">
       <a [routerLink]="''" class="nav-item">Dashboard</a>
       <a [routerLink]="'/historic'" class="nav-item">Historic</a>
-      <a href="#about" class="nav-item">About</a>
+      <a [routerLink]="'/about'" class="nav-item">About</a>
     </div>
   </div>
 </nav>
