shadowww em tudo

--- a/elsap/src/app/map/map.component.html
+++ b/elsap/src/app/map/map.component.html
@@ -7,7 +7,7 @@ crossorigin=""/>
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
    
-<div class="map-container">
+<div class="map-container shadow rounded">
     <div class="map-frame">
       <div id="map"></div>
     </div>
