addes text on about page

--- a/elsap/src/app/about/about.component.html
+++ b/elsap/src/app/about/about.component.html
@@ -1,11 +1,19 @@
 <div class="container-fluid">
     <div class="row centered-row">
-        <div class="card-like col-md-6 shadow p-3 mb-5 bg-white rounded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et libero vel augue mattis venenatis. Aenean laoreet, neque vitae sagittis mollis, mi arcu tristique ligula, et volutpat lorem nisl vitae lorem. Sed lacinia dui sed tortor consequat, quis eleifend neque rutrum. Curabitur rutrum, neque id laoreet elementum, urna lectus ultricies mi, eu cursus urna neque eu velit. Mauris interdum pulvinar elit. Suspendisse non purus placerat, suscipit nisl at, varius dui. Maecenas pharetra consequat neque vitae lacinia. Nulla interdum eros id mauris feugiat, a scelerisque metus fringilla. </div>
-        <div class="card-like col-md-6 shadow p-3 mb-5 bg-white rounded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et libero vel augue mattis venenatis. Aenean laoreet, neque vitae sagittis mollis, mi arcu tristique ligula, et volutpat lorem nisl vitae lorem. Sed lacinia dui sed tortor consequat, quis eleifend neque rutrum. Curabitur rutrum, neque id laoreet elementum, urna lectus ultricies mi, eu cursus urna neque eu velit. Mauris interdum pulvinar elit. Suspendisse non purus placerat, suscipit nisl at, varius dui. Maecenas pharetra consequat neque vitae lacinia. Nulla interdum eros id mauris feugiat, a scelerisque metus fringilla. </div>
+        <div class="col-md-2"> </div>
+        <div class="card-like col-md-8 shadow p-3 mb-5 bg-white rounded">
+            <div id="banner"></div>
+            <h1>Thanks for visiting!</h1>
+            If you'd like to run the project, checkout our <a href="bit.ly/elsagit"> github </a>
+            <br>
+            <br>
+            Don't forget to <b><a href="bit.ly/elsavote">#voteForELSA</a></b> at bit.ly/elsavote
+            <br>
+            <br>
+            ELSA was created by @caroljf, @gubarbos, @wkimmy, @gadelha and @almeiraf
+
+        </div>
+        <div class="col-md-2"> </div>
     </div>
 
-    <div class="row">
-        <div class="card-like col-md-12 shadow p-3 mb-5 bg-white rounded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et libero vel augue mattis venenatis. Aenean laoreet, neque vitae sagittis mollis, mi arcu tristique ligula, et volutpat lorem nisl vitae lorem. Sed lacinia dui sed tortor consequat, quis eleifend neque rutrum. Curabitur rutrum, neque id laoreet elementum, urna lectus ultricies mi, eu cursus urna neque eu velit. Mauris interdum pulvinar elit. Suspendisse non purus placerat, suscipit nisl at, varius dui. Maecenas pharetra consequat neque vitae lacinia. Nulla interdum eros id mauris feugiat, a scelerisque metus fringilla. </div>
-    </div>
 </div>
-
