--- a/front-end/src/app/about/about.component.html
+++ b/front-end/src/app/about/about.component.html
@@ -4,10 +4,10 @@
         <div class="card-like col-md-8 shadow p-3 mb-5 bg-white rounded">
             <div id="banner"></div>
             <h1>Thanks for visiting!</h1>
-            If you'd like to run the project, checkout our <a href="bit.ly/elsagit"> github </a>
+            If you'd like to run the project, checkout our <a href="https://bit.ly/elsagit"> github </a>
             <br>
             <br>
-            Don't forget to <b><a href="bit.ly/elsavote">#voteForELSA</a></b> at bit.ly/elsavote
+            Don't forget to <b><a href="https://bit.ly/elsavote">#voteForELSA</a></b> at bit.ly/elsavote
             <br>
             <br>
             ELSA was created by @caroljf, @gubarbos, @wkimmy, @gadelha and @almeiraf
